Update Diabetes Prediction System Using Maching Learning .ipynb

--- a/Diabetes Prediction System Using Maching Learning .ipynb
+++ b/Diabetes Prediction System Using Maching Learning .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4240c9fa",
+   "id": "0278ad49",
    "metadata": {},
    "source": [
     "# Diabetes Prediction using Support Vector Machine Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ca08b2d6",
+   "id": "f16ee6d7",
    "metadata": {},
    "source": [
     "Support vector machine model is one of the important algorithms of superages learning algotithm algorithm.\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c356192",
+   "id": "21445fb1",
    "metadata": {},
    "source": [
     "__WORKFLOW__\n",
@@ -33,11 +33,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5879e100",
+   "id": "868a7fd6",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:21.688522Z",
-     "start_time": "2024-02-14T07:11:07.556531Z"
+     "end_time": "2024-02-14T16:48:14.157110Z",
+     "start_time": "2024-02-14T16:47:43.956483Z"
     }
    },
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e481986c",
+   "id": "d640eed0",
    "metadata": {},
    "source": [
     " Data collection and analysis"
@@ -62,11 +62,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "c409d665",
+   "id": "756f5acd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:21.775420Z",
-     "start_time": "2024-02-14T07:11:21.693530Z"
+     "end_time": "2024-02-14T16:48:14.458808Z",
+     "start_time": "2024-02-14T16:48:14.172117Z"
     }
    },
    "outputs": [],
@@ -78,11 +78,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "69c8f9ce",
+   "id": "aa589445",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:21.920103Z",
-     "start_time": "2024-02-14T07:11:21.780427Z"
+     "end_time": "2024-02-14T16:48:14.607778Z",
+     "start_time": "2024-02-14T16:48:14.473814Z"
     }
    },
    "outputs": [
@@ -211,11 +211,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "007d9670",
+   "id": "3013e0cf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:21.976353Z",
-     "start_time": "2024-02-14T07:11:21.930110Z"
+     "end_time": "2024-02-14T16:48:14.697798Z",
+     "start_time": "2024-02-14T16:48:14.622785Z"
     }
    },
    "outputs": [
@@ -238,11 +238,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "f4c9b5ea",
+   "id": "7d785f6b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:22.148861Z",
-     "start_time": "2024-02-14T07:11:21.986363Z"
+     "end_time": "2024-02-14T16:48:14.956761Z",
+     "start_time": "2024-02-14T16:48:14.707779Z"
     }
    },
    "outputs": [
@@ -414,11 +414,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "db5ce966",
+   "id": "9b1bdd7a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:22.217723Z",
-     "start_time": "2024-02-14T07:11:22.148861Z"
+     "end_time": "2024-02-14T16:48:15.068785Z",
+     "start_time": "2024-02-14T16:48:14.961765Z"
     }
    },
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17b79f09",
+   "id": "a5e0b055",
    "metadata": {},
    "source": [
     "0 ---> Non-Diabetic </br>\n",
@@ -452,11 +452,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9e5bd06d",
+   "id": "58f70c78",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:22.339934Z",
-     "start_time": "2024-02-14T07:11:22.227746Z"
+     "end_time": "2024-02-14T16:48:15.242373Z",
+     "start_time": "2024-02-14T16:48:15.078792Z"
     }
    },
    "outputs": [
@@ -553,11 +553,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c32c4d06",
+   "id": "01242b1e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:22.412140Z",
-     "start_time": "2024-02-14T07:11:22.344939Z"
+     "end_time": "2024-02-14T16:48:15.576642Z",
+     "start_time": "2024-02-14T16:48:15.247376Z"
     }
    },
    "outputs": [],
@@ -570,11 +570,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c85b1e5a",
+   "id": "e3611ef9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:22.561351Z",
-     "start_time": "2024-02-14T07:11:22.422150Z"
+     "end_time": "2024-02-14T16:48:15.832037Z",
+     "start_time": "2024-02-14T16:48:15.591651Z"
     }
    },
    "outputs": [
@@ -619,11 +619,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "14c9eb0a",
+   "id": "b6ac8297",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:22.801334Z",
-     "start_time": "2024-02-14T07:11:22.561351Z"
+     "end_time": "2024-02-14T16:48:15.961724Z",
+     "start_time": "2024-02-14T16:48:15.877045Z"
     }
    },
    "outputs": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ccc0ff51",
+   "id": "06b283cb",
    "metadata": {},
    "source": [
     "Data Standardization"
@@ -661,11 +661,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "f5def44a",
+   "id": "89365122",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:22.971933Z",
-     "start_time": "2024-02-14T07:11:22.816344Z"
+     "end_time": "2024-02-14T16:48:16.172874Z",
+     "start_time": "2024-02-14T16:48:15.971732Z"
     }
    },
    "outputs": [],
@@ -676,11 +676,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b295b41d",
+   "id": "82301edc",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:23.179680Z",
-     "start_time": "2024-02-14T07:11:22.986915Z"
+     "end_time": "2024-02-14T16:48:16.476666Z",
+     "start_time": "2024-02-14T16:48:16.182881Z"
     }
    },
    "outputs": [
@@ -705,11 +705,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "01e77927",
+   "id": "79d5538b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:23.267389Z",
-     "start_time": "2024-02-14T07:11:23.194671Z"
+     "end_time": "2024-02-14T16:48:16.721821Z",
+     "start_time": "2024-02-14T16:48:16.486672Z"
     }
    },
    "outputs": [],
@@ -722,11 +722,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "0968f676",
+   "id": "a7fc31a4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:23.385899Z",
-     "start_time": "2024-02-14T07:11:23.292398Z"
+     "end_time": "2024-02-14T16:48:16.932270Z",
+     "start_time": "2024-02-14T16:48:16.741881Z"
     }
    },
    "outputs": [
@@ -757,11 +757,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "fb01a024",
+   "id": "c3609055",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:23.521977Z",
-     "start_time": "2024-02-14T07:11:23.400889Z"
+     "end_time": "2024-02-14T16:48:17.098040Z",
+     "start_time": "2024-02-14T16:48:16.947312Z"
     }
    },
    "outputs": [],
@@ -773,11 +773,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "fee35e0b",
+   "id": "8798b30b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:23.646332Z",
-     "start_time": "2024-02-14T07:11:23.531993Z"
+     "end_time": "2024-02-14T16:48:17.258032Z",
+     "start_time": "2024-02-14T16:48:17.112583Z"
     }
    },
    "outputs": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cc3f0b4f",
+   "id": "c03f6ff6",
    "metadata": {},
    "source": [
     "Train Test Split"
@@ -829,11 +829,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "b141aaff",
+   "id": "9d44d802",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:23.796009Z",
-     "start_time": "2024-02-14T07:11:23.666346Z"
+     "end_time": "2024-02-14T16:48:17.539647Z",
+     "start_time": "2024-02-14T16:48:17.268039Z"
     }
    },
    "outputs": [],
@@ -845,11 +845,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b1d649c1",
+   "id": "6cbe00ac",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:23.984300Z",
-     "start_time": "2024-02-14T07:11:23.806037Z"
+     "end_time": "2024-02-14T16:48:18.029949Z",
+     "start_time": "2024-02-14T16:48:17.584640Z"
     }
    },
    "outputs": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "96d25a89",
+   "id": "93764bae",
    "metadata": {},
    "source": [
     "Training the Model"
@@ -876,11 +876,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "2ae0cbd4",
+   "id": "cd2e6d58",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:24.226818Z",
-     "start_time": "2024-02-14T07:11:23.999314Z"
+     "end_time": "2024-02-14T16:48:18.178493Z",
+     "start_time": "2024-02-14T16:48:18.044956Z"
     }
    },
    "outputs": [],
@@ -891,11 +891,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "32fbc295",
+   "id": "30e3137f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:11:24.423938Z",
-     "start_time": "2024-02-14T07:11:24.236831Z"
+     "end_time": "2024-02-14T16:48:18.443994Z",
+     "start_time": "2024-02-14T16:48:18.188499Z"
     }
    },
    "outputs": [
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "867db3d1",
+   "id": "fb27f436",
    "metadata": {},
    "source": [
     "Model Evaluation\n",
@@ -930,12 +930,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "1472fc74",
+   "execution_count": 21,
+   "id": "9e6f615f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:15:17.235404Z",
-     "start_time": "2024-02-14T07:15:17.205577Z"
+     "end_time": "2024-02-14T16:48:18.604063Z",
+     "start_time": "2024-02-14T16:48:18.453991Z"
     }
    },
    "outputs": [],
@@ -947,12 +947,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "bc3d6ccb",
+   "execution_count": 22,
+   "id": "51fe325d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T07:19:23.675473Z",
-     "start_time": "2024-02-14T07:19:23.666366Z"
+     "end_time": "2024-02-14T16:48:18.827064Z",
+     "start_time": "2024-02-14T16:48:18.609071Z"
     }
    },
    "outputs": [
@@ -970,10 +970,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "cfe64558",
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 23,
+   "id": "3cc80c1a",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-14T16:48:21.779170Z",
+     "start_time": "2024-02-14T16:48:18.847075Z"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'cla' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Accuracy score on the test data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m X_train_prediction \u001b[38;5;241m=\u001b[39m cla\u001b[38;5;241m.\u001b[39mssifier\u001b[38;5;241m.\u001b[39mpredict(X_train)\n\u001b[0;32m      3\u001b[0m training_data_accuracy \u001b[38;5;241m=\u001b[39m accuracy_score(X_train_prediction, Y_train)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'cla' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Accuracy score on the test data\n",
     "X_train_prediction = cla.ssifier.predict(X_train)\n",
