--- a/Diabetes Prediction System Using Maching Learning .ipynb
+++ b/Diabetes Prediction System Using Maching Learning .ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0278ad49",
+   "id": "2a7401ad",
    "metadata": {},
    "source": [
     "# Diabetes Prediction using Support Vector Machine Model"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f16ee6d7",
+   "id": "4a5a2264",
    "metadata": {},
    "source": [
     "Support vector machine model is one of the important algorithms of superages learning algotithm algorithm.\n",
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21445fb1",
+   "id": "27071fa1",
    "metadata": {},
    "source": [
     "__WORKFLOW__\n",
@@ -33,11 +33,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "868a7fd6",
+   "id": "d3dd522b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:14.157110Z",
-     "start_time": "2024-02-14T16:47:43.956483Z"
+     "end_time": "2024-02-15T22:11:13.343172Z",
+     "start_time": "2024-02-15T22:11:07.632784Z"
     }
    },
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d640eed0",
+   "id": "217cd3e5",
    "metadata": {},
    "source": [
     " Data collection and analysis"
@@ -62,11 +62,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "756f5acd",
+   "id": "a10ad77a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:14.458808Z",
-     "start_time": "2024-02-14T16:48:14.172117Z"
+     "end_time": "2024-02-15T22:11:13.471249Z",
+     "start_time": "2024-02-15T22:11:13.354996Z"
     }
    },
    "outputs": [],
@@ -78,11 +78,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "aa589445",
+   "id": "fd12274d",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:14.607778Z",
-     "start_time": "2024-02-14T16:48:14.473814Z"
+     "end_time": "2024-02-15T22:11:13.546427Z",
+     "start_time": "2024-02-15T22:11:13.477762Z"
     }
    },
    "outputs": [
@@ -211,11 +211,11 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "3013e0cf",
+   "id": "1172c709",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:14.697798Z",
-     "start_time": "2024-02-14T16:48:14.622785Z"
+     "end_time": "2024-02-15T22:11:13.628842Z",
+     "start_time": "2024-02-15T22:11:13.551427Z"
     }
    },
    "outputs": [
@@ -238,11 +238,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "7d785f6b",
+   "id": "99d1c081",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:14.956761Z",
-     "start_time": "2024-02-14T16:48:14.707779Z"
+     "end_time": "2024-02-15T22:11:13.790783Z",
+     "start_time": "2024-02-15T22:11:13.647856Z"
     }
    },
    "outputs": [
@@ -414,11 +414,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9b1bdd7a",
+   "id": "29cbe62f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:15.068785Z",
-     "start_time": "2024-02-14T16:48:14.961765Z"
+     "end_time": "2024-02-15T22:11:13.897640Z",
+     "start_time": "2024-02-15T22:11:13.792810Z"
     }
    },
    "outputs": [
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5e0b055",
+   "id": "cb7752c2",
    "metadata": {},
    "source": [
     "0 ---> Non-Diabetic </br>\n",
@@ -452,11 +452,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "58f70c78",
+   "id": "6c5104e9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:15.242373Z",
-     "start_time": "2024-02-14T16:48:15.078792Z"
+     "end_time": "2024-02-15T22:11:14.128430Z",
+     "start_time": "2024-02-15T22:11:13.902630Z"
     }
    },
    "outputs": [
@@ -553,11 +553,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "01242b1e",
+   "id": "961f374c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:15.576642Z",
-     "start_time": "2024-02-14T16:48:15.247376Z"
+     "end_time": "2024-02-15T22:11:14.285282Z",
+     "start_time": "2024-02-15T22:11:14.142953Z"
     }
    },
    "outputs": [],
@@ -570,11 +570,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "e3611ef9",
+   "id": "ed984bec",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:15.832037Z",
-     "start_time": "2024-02-14T16:48:15.591651Z"
+     "end_time": "2024-02-15T22:11:14.730105Z",
+     "start_time": "2024-02-15T22:11:14.309870Z"
     }
    },
    "outputs": [
@@ -619,11 +619,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "b6ac8297",
+   "id": "9cb3b720",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:15.961724Z",
-     "start_time": "2024-02-14T16:48:15.877045Z"
+     "end_time": "2024-02-15T22:11:15.547016Z",
+     "start_time": "2024-02-15T22:11:14.747633Z"
     }
    },
    "outputs": [
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "06b283cb",
+   "id": "6e978a91",
    "metadata": {},
    "source": [
     "Data Standardization"
@@ -661,11 +661,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "89365122",
+   "id": "70efe641",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:16.172874Z",
-     "start_time": "2024-02-14T16:48:15.971732Z"
+     "end_time": "2024-02-15T22:11:15.947451Z",
+     "start_time": "2024-02-15T22:11:15.567005Z"
     }
    },
    "outputs": [],
@@ -676,11 +676,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "82301edc",
+   "id": "2cdd1789",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:16.476666Z",
-     "start_time": "2024-02-14T16:48:16.182881Z"
+     "end_time": "2024-02-15T22:11:16.447554Z",
+     "start_time": "2024-02-15T22:11:15.957445Z"
     }
    },
    "outputs": [
@@ -705,11 +705,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "79d5538b",
+   "id": "3acdb5a0",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:16.721821Z",
-     "start_time": "2024-02-14T16:48:16.486672Z"
+     "end_time": "2024-02-15T22:11:16.544155Z",
+     "start_time": "2024-02-15T22:11:16.463046Z"
     }
    },
    "outputs": [],
@@ -722,11 +722,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "a7fc31a4",
+   "id": "6fa585d9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:16.932270Z",
-     "start_time": "2024-02-14T16:48:16.741881Z"
+     "end_time": "2024-02-15T22:11:16.885419Z",
+     "start_time": "2024-02-15T22:11:16.549964Z"
     }
    },
    "outputs": [
@@ -757,11 +757,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c3609055",
+   "id": "9b9b1cf8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:17.098040Z",
-     "start_time": "2024-02-14T16:48:16.947312Z"
+     "end_time": "2024-02-15T22:11:17.082007Z",
+     "start_time": "2024-02-15T22:11:16.896276Z"
     }
    },
    "outputs": [],
@@ -773,11 +773,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "8798b30b",
+   "id": "81e95bd7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:17.258032Z",
-     "start_time": "2024-02-14T16:48:17.112583Z"
+     "end_time": "2024-02-15T22:11:17.301422Z",
+     "start_time": "2024-02-15T22:11:17.095912Z"
     }
    },
    "outputs": [
@@ -820,7 +820,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c03f6ff6",
+   "id": "0f3830d3",
    "metadata": {},
    "source": [
     "Train Test Split"
@@ -829,11 +829,11 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "9d44d802",
+   "id": "beca1e44",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:17.539647Z",
-     "start_time": "2024-02-14T16:48:17.268039Z"
+     "end_time": "2024-02-15T22:11:17.754819Z",
+     "start_time": "2024-02-15T22:11:17.319014Z"
     }
    },
    "outputs": [],
@@ -845,11 +845,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6cbe00ac",
+   "id": "c4310628",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:18.029949Z",
-     "start_time": "2024-02-14T16:48:17.584640Z"
+     "end_time": "2024-02-15T22:11:17.869033Z",
+     "start_time": "2024-02-15T22:11:17.761983Z"
     }
    },
    "outputs": [
@@ -867,7 +867,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "93764bae",
+   "id": "664db529",
    "metadata": {},
    "source": [
     "Training the Model"
@@ -876,11 +876,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "cd2e6d58",
+   "id": "17cab1d7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:18.178493Z",
-     "start_time": "2024-02-14T16:48:18.044956Z"
+     "end_time": "2024-02-15T22:11:18.167731Z",
+     "start_time": "2024-02-15T22:11:17.887561Z"
     }
    },
    "outputs": [],
@@ -891,11 +891,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "30e3137f",
+   "id": "71e1283b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:18.443994Z",
-     "start_time": "2024-02-14T16:48:18.188499Z"
+     "end_time": "2024-02-15T22:11:18.585949Z",
+     "start_time": "2024-02-15T22:11:18.172709Z"
     }
    },
    "outputs": [
@@ -920,7 +920,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fb27f436",
+   "id": "7871020a",
    "metadata": {},
    "source": [
     "Model Evaluation\n",
@@ -931,11 +931,11 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9e6f615f",
+   "id": "44a14201",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:18.604063Z",
-     "start_time": "2024-02-14T16:48:18.453991Z"
+     "end_time": "2024-02-15T22:11:18.668322Z",
+     "start_time": "2024-02-15T22:11:18.605942Z"
     }
    },
    "outputs": [],
@@ -948,11 +948,11 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "51fe325d",
+   "id": "c577b941",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:18.827064Z",
-     "start_time": "2024-02-14T16:48:18.609071Z"
+     "end_time": "2024-02-15T22:11:18.809430Z",
+     "start_time": "2024-02-15T22:11:18.672889Z"
     }
    },
    "outputs": [
@@ -971,31 +971,145 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "3cc80c1a",
+   "id": "0b1b2219",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-02-14T16:48:21.779170Z",
-     "start_time": "2024-02-14T16:48:18.847075Z"
+     "end_time": "2024-02-15T22:11:19.198160Z",
+     "start_time": "2024-02-15T22:11:18.828060Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Accuracy score on the test data\n",
+    "X_test_prediction = classifier.predict(X_test)\n",
+    "test_data_accuracy = accuracy_score(X_test_prediction, Y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9ba1d2a6",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-15T22:11:19.399478Z",
+     "start_time": "2024-02-15T22:11:19.217740Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'cla' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[23], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Accuracy score on the test data\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m X_train_prediction \u001b[38;5;241m=\u001b[39m cla\u001b[38;5;241m.\u001b[39mssifier\u001b[38;5;241m.\u001b[39mpredict(X_train)\n\u001b[0;32m      3\u001b[0m training_data_accuracy \u001b[38;5;241m=\u001b[39m accuracy_score(X_train_prediction, Y_train)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'cla' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy score of the test data :  0.7727272727272727\n"
      ]
     }
    ],
    "source": [
-    "# Accuracy score on the test data\n",
-    "X_train_prediction = cla.ssifier.predict(X_train)\n",
-    "training_data_accuracy = accuracy_score(X_train_prediction, Y_train)"
+    "print('Accuracy score of the test data : ', test_data_accuracy)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "19e244a1",
+   "metadata": {},
+   "source": [
+    "Overfitting has occured\n",
+    "- This is because the model perform well on the training data but performed poorly on the test data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d60160d5",
+   "metadata": {},
+   "source": [
+    "Making a predictive system"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "15935018",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-02-15T22:27:40.837992Z",
+     "start_time": "2024-02-15T22:27:40.819313Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.82781311  1.4742667   0.25303625 -1.28821221 -0.69289057  0.76245745\n",
+      "   0.1966813   0.06459135]]\n",
+      "[1]\n",
+      "The person is diabetic\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\I\\anaconda3\\Lib\\site-packages\\sklearn\\base.py:464: UserWarning: X does not have valid feature names, but StandardScaler was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_data = (10,168,74,0,0,38.0,0.537,34)\n",
+    "\n",
+    "# changing the input_data into a numpy array\n",
+    "input_data_as_numpy_array = np.array(input_data)\n",
+    "\n",
+    "# Reshape the array as we are predicting for one instance\n",
+    "# here if, we want to use one data point. if we don't reshape the \n",
+    "# array, the model will be expecting 768 observations.\n",
+    "input_data_reshaped = input_data_as_numpy_array.reshape(1,-1)\n",
+    "\n",
+    "# Standardize the input data\n",
+    "std_data = scaler.transform(input_data_reshaped)\n",
+    "print(std_data)\n",
+    "\n",
+    "prediction = classifier.predict(std_data)\n",
+    "print(prediction)\n",
+    "\n",
+    "if (prediction[0] == 0):\n",
+    "    print(\"The person is not diabetic\")\n",
+    "else:\n",
+    "    print('The person is diabetic')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99122f27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0f375d77",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e0c7155",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7e2a9d80",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
